--- a/assets/style.css
+++ b/assets/style.css
@@ -16,7 +16,7 @@ header {
 .card {
     border-color: black;
     border-width: 3px;
-    margin: 0;
+    margin: 10px;
     padding: 0;
     width: 260px;
 }
